<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>SpringWSProject</groupId>
	<artifactId>SpringWSProject</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
    <name>SpringWSProject</name>
	<description />
	<dependencies>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>2.9.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>2.9.2</version>
            <scope>compile</scope>
        </dependency>
		<dependency>
			<groupId>org.apache.xmlbeans</groupId>
			<artifactId>xmlbeans</artifactId>
			<version>2.4.0</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>stax</groupId>
					<artifactId>stax-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
        <!--<dependency>-->
            <!--<groupId>org.apache.ws.xmlschema</groupId>-->
            <!--<artifactId>xmlschema-core</artifactId>-->
            <!--<version>2.2.1</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.apache.ws.xmlschema</groupId>
            <artifactId>xmlschema-core</artifactId>
            <version>2.0.1</version>
        </dependency>

        <!--<dependency>-->
			<!--<groupId>org.apache.ws.commons.schema</groupId>-->
			<!--<artifactId>XmlSchema</artifactId>-->
			<!--<version>1.3.2</version>-->
			<!--&lt;!&ndash;<exclusions>&ndash;&gt;-->
				<!--&lt;!&ndash;<exclusion>&ndash;&gt;-->
					<!--&lt;!&ndash;<groupId>stax</groupId>&ndash;&gt;-->
					<!--&lt;!&ndash;<artifactId>stax-api</artifactId>&ndash;&gt;-->
				<!--&lt;!&ndash;</exclusion>&ndash;&gt;-->
			<!--&lt;!&ndash;</exclusions>&ndash;&gt;-->
		<!--</dependency>-->
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-core</artifactId>
			<version>5.3.0</version>
<!--			<exclusions>-->
<!--				<exclusion>-->
<!--					<groupId>org.apache.camel</groupId>-->
<!--					<artifactId>camel-core</artifactId>-->
<!--				</exclusion>-->
<!--				<exclusion>-->
<!--					<groupId>org.apache.geronimo.specs</groupId>-->
<!--					<artifactId>geronimo-j2ee-management_1.0_spec</artifactId>-->
<!--				</exclusion>-->
<!--				<exclusion>-->
<!--					<groupId>org.apache.geronimo.specs</groupId>-->
<!--					<artifactId>geronimo-j2ee-management_1.1_spec</artifactId>-->
<!--				</exclusion>-->
<!--				<exclusion>-->
<!--					<groupId>org.apache.geronimo.specs</groupId>-->
<!--					<artifactId>geronimo-jms_1.1_spec</artifactId>-->
<!--				</exclusion>-->
<!--				<exclusion>-->
<!--					<groupId>org.springframework</groupId>-->
<!--					<artifactId>spring-context</artifactId>-->
<!--				</exclusion>-->
<!--&lt;!&ndash;				<exclusion>&ndash;&gt;-->
<!--&lt;!&ndash;					<groupId>org.apache.activemq</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;					<artifactId>activeio-core</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;				</exclusion>&ndash;&gt;-->
<!--			</exclusions>-->
		</dependency>
        <dependency>
            <groupId>com.sun.xml.parsers</groupId>
            <artifactId>jaxp-ri</artifactId>
            <version>1.4.5</version>
            <scope>runtime</scope>
        </dependency>
		<dependency>
			<groupId>com.sun.xml.messaging.saaj</groupId>
			<artifactId>saaj-impl</artifactId>
			<version>1.3.9</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.ws</groupId>
			<artifactId>spring-ws-core</artifactId>
			<version>2.2.0.RELEASE</version>
			<exclusions>
				<exclusion>
					<groupId>stax</groupId>
					<artifactId>stax-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>jdom</groupId>
			<artifactId>jdom</artifactId>
			<version>1.0</version>
			<exclusions>
				<exclusion>
					<groupId>stax</groupId>
					<artifactId>stax-api</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>stax</artifactId>
					<groupId>stax</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>Documents</groupId>
			<artifactId>Documents</artifactId>
			<version>0.0.1-SNAPSHOT</version>
			<type>jar</type>
			<exclusions>
				<exclusion>
					<groupId>stax</groupId>
					<artifactId>stax-api</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>stax</artifactId>
					<groupId>stax</groupId>
				</exclusion>
			</exclusions>
		</dependency>

        <dependency>
            <groupId>javax.jms</groupId>
            <artifactId>jms</artifactId>
            <version>1.1</version>
        </dependency>

		<dependency>
			<groupId>org.apache.openejb</groupId>
			<artifactId>javaee-api</artifactId>
			<version>5.0-1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.faces</groupId>
			<artifactId>jsf-api</artifactId>
			<version>1.2_05</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.faces</groupId>
			<artifactId>jsf-impl</artifactId>
			<version>1.2_05</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock-legacy</artifactId>
			<version>2.5.1</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-easymock</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${org.springframework.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-oxm</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.hateoas</groupId>
            <artifactId>spring-hateoas</artifactId>
            <version>0.20.0.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>com.javaetmoi.core</groupId>
            <artifactId>javaetmoi-spring4-vfs2-support</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>wsdl4j</groupId>
            <artifactId>wsdl4j</artifactId>
            <version>1.6.3</version>
        </dependency>

        <dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.3.5</version>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>
        <!--<dependency>-->
            <!--<groupId>org.codehaus.jackson</groupId>-->
            <!--<artifactId>jackson-mapper-asl</artifactId>-->
            <!--<version>1.9.13</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.codehaus.jackson</groupId>-->
            <!--<artifactId>jackson-core-asl</artifactId>-->
            <!--<version>1.9.13</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>com.fasterxml.jackson.dataformat</groupId>-->
            <!--<artifactId>jackson-dataformat-xml</artifactId>-->
            <!--<version>2.3.2</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>com.thoughtworks.xstream</groupId>-->
            <!--<artifactId>xstream</artifactId>-->
            <!--<version>1.4.8</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.16</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>4.2.2.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>Documents</groupId>
            <artifactId>Documents</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>Documents</groupId>
            <artifactId>Documents</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

    </dependencies>
	<build>
		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
		<outputDirectory>${basedir}/WebRoot/WEB-INF/classes</outputDirectory>
		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.18.1</version>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-war-plugin</artifactId>
                <version>3.0.0</version>
				<configuration>
					<webappDirectory>${basedir}/WebRoot</webappDirectory>
					<!--<warSourceDirectory>${basedir}/WebRoot</warSourceDirectory>-->
					<packagingExcludes>
						WEB-INF/lib/stax*.jar
					</packagingExcludes>
                    <!--<packagingIncludes>${basedir}/WebRoot/WEB-INF/classes</packagingIncludes>-->
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>

				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!--<plugin>-->
				<!--<groupId>org.codehaus.cargo</groupId>-->
				<!--<artifactId>cargo-maven2-plugin</artifactId>-->
				<!--<configuration>-->
					<!--<container>-->
						<!--<containerId>jboss51x</containerId>-->
						<!--<home>C:\jboss-5.1.0.GA</home>-->
						<!--<timeout>50000</timeout>-->
					<!--</container>-->
					<!--<deployables>-->
						<!--<deployable>-->
							<!--<location>${basedir}\target\SpringWSProject-0.0.1-SNAPSHOT.war</location>-->
							<!--<type>war</type>-->
							<!--<pingTimeout>50000</pingTimeout>-->
						<!--</deployable>-->
					<!--</deployables>-->

					<!--<configuration>-->
						<!--<home>${project.build.directory}/jboss51x</home>-->
						<!--<properties>-->
							<!--<cargo.servlet.port>8080</cargo.servlet.port>-->
							<!--<cargo.jvmargs>-->
								<!--&lt;!&ndash;-Dvertex.home=${cargo.vertex.home}&ndash;&gt;-->
								<!-- -XX:ReservedCodeCacheSize=128m-->
								<!-- -XX:MaxPermSize=512M-->
							<!--</cargo.jvmargs>-->
							<!--<cargo.jboss.jrmp.port>1090</cargo.jboss.jrmp.port>-->
						<!--</properties>-->
						<!--&lt;!&ndash;<skipTests>false</skipTests>&ndash;&gt;-->
					<!--</configuration>-->
				<!--</configuration>-->
				<!--<executions>-->
					<!--<execution>-->
						<!--<id>start-container</id>-->
						<!--<phase>pre-integration-test</phase>-->
						<!--<goals>-->
							<!--<goal>start</goal>-->
						<!--</goals>-->
					<!--</execution>-->
					<!--<execution>-->
						<!--<id>stop-container</id>-->
						<!--<phase>post-integration-test</phase>-->
						<!--<goals>-->
							<!--<goal>stop</goal>-->
						<!--</goals>-->
					<!--</execution>-->
				<!--</executions>-->
			<!--</plugin>-->
		</plugins>
	</build>

	<properties>

		<powermock.version>1.5</powermock.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<powermock.version>1.4.11</powermock.version>
		<org.springframework.version>4.1.6.RELEASE</org.springframework.version>
	</properties>
</project>